--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,2 +1,6 @@
 customer.params.x=15
 customer.params.y=79
+
+management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:h2:mem:product-db
+spring.h2.console.enabled=true
