--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,5 +1,5 @@
-customer.params.x=15
-customer.params.y=79
+inventory.params.x=15
+inventory.params.y=79
 
 management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:h2:mem:product-db
